# update_checker

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  update_checker.py
.github/: dependabot.yml
.github/workflows/: ci.yml
src/update_checker/: __init__.py  _update_checker.py  core.py
tests/: test_update_checker.py
