[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "update_checker_rg"
version = "0.20.0"
authors = [
  { name="Rahul Gupta" },
]
description = "A python module that will check for package updates."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = {file = "LICENSE.md"}
dependencies = [
    "requests>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.12.0",
    "Flake8-pyproject>=1.2.2",
    "pytest>=7.1.0",
]

[project.urls]
Homepage = "https://github.com/rgathub/update_checker"
Issues = "https://github.com/rgathub/update_checker/issues"